# vertical-slice-graphql-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fix_pydantic_types.py  pyproject.toml
app/: main.py  restate_service.py
app/core/: audit.py
vertical-slice-graphql-demo/: .dockerignore  README.md  docker-compose.yml  pyproject.toml
vertical-slice-graphql-demo/app/: main.py
vertical-slice-graphql-demo/app/core/: test_audit.py
vertical-slice-graphql-demo/app/e2e_tests/: __init__.py  test_async_workflow_e2e.py  test_site_registration.py  test_trial_virtual_object_e2e.py
vertical-slice-graphql-demo/app/infrastructure/database/: test_models.py
vertical-slice-graphql-demo/app/usecases/commands/register_site_to_trial/: test_handler.py  test_resolver.py  types.py
vertical-slice-graphql-demo/app/usecases/commands/trial_management/: _validation.py
vertical-slice-graphql-demo/app/usecases/commands/trial_management/create_trial/: handler.py  test_resolver.py  types.py
vertical-slice-graphql-demo/app/usecases/commands/trial_management/update_trial_metadata/: test_handler.py
vertical-slice-graphql-demo/app/usecases/queries/get_audit_log/: test_handler.py
vertical-slice-graphql-demo/app/usecases/queries/get_trial/: test_resolver.py
vertical-slice-graphql-demo/app/usecases/queries/list_trials/: test_resolver.py
vertical-slice-graphql-demo/app/usecases/workflows/onboard_trial_async/: __init__.py  resolver.py  test_resolver.py
vertical-slice-graphql-demo/app/usecases/workflows/onboard_trial_sync/: __init__.py  test_handler.py  test_resolver.py
(+76 files in other folders)
