[project]
name = "vertical-slice-graphql-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.119.1",
    "httpx>=0.28.1",
    "pydantic>=2.8",
    "pytest>=8.0",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.0",
    "restate-sdk>=0.11.0",
    "sqlalchemy>=2.0",
    "strawberry-graphql>=0.211",
    "uvicorn>=0.30",
]

[tool.pytest.ini_options]
markers = [
    "restate_e2e: marks tests as requiring Restate runtime (deselect with '-m \"not restate_e2e\"')",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
